# Dev_SAP

./: .gitattributes  .gitignore  ACLS_week8.ipynb  CONTRIBUTING.md  Clean Code.py  Clean_Code.py  Important_stuff.ipynb  Project_CO2_main.ipynb  README.md  Report_Trackmodule1_daSilvadoAido_Luana.docx  TCGA-STAD clinical data.csv  TCGA-STAD subtype data.csv  TCGA-STAD_subtypes.csv  TM_1_RF_daSilvadoAido_Luana Kopie.ipynb  TM_1_RF_daSilvadoAido_Luana.ipynb  pyproject.toml  requirements-dev.txt
.github/workflow/: cd.yml  ci.yml
.github/workflows/: ci-cd.yml  ci.yml
data/: TCGA-STAD_gene_expression_cpm.csv  TCGA-STAD_subtypes.csv
snapshot/original_code/: TM_1_RF_daSilvadoAido_Luana-2.ipynb  TM_1_RF_daSilvadoAido_Luana.py
src/RF_models_DSAP/: __init__.py  config.py  main.py  model.py  preprocessing.py  visualization.py
tests/: test_preprocessing.py
workflow/: ci.yml
